--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="block"></div>   
     <span class="inline">This is an inline element</span>
 
-    <p>Lorem ipsum, dolor sit amet <span class="display-inline"></span> adipisicing elit. Blanditiis, ipsam. Obcaecati sequi deserunt assumenda, asperiores, vero quae laborum explicabo ut hic eius praesentium deleniti sapiente! Dolor excepturi laborum laudantium voluptatem.
+    <div>Lorem ipsum dolor sit amet,<p class="display-inline">adipisicing</p>  elit. Neque sapiente earum repellat corporis ea sit recusandae, fugiat minus, eaque magni tempore beatae dolores rerum quibusdam voluptatum, numquam maiores id dicta!S</div>
+    <p>Lorem ipsum, dolor sit amet adipisicing elit. Blanditiis, ipsam. Obcaecati </span class="display-inline-block"> sequi </span>deserunt assumenda, asperiores, vero quae laborum explicabo ut hic eius praesentium deleniti sapiente! Dolor excepturi laborum laudantium voluptatem.
 
     </p>
 
