--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <span class="inline">This is an inline element</span>
 
     <div>Lorem ipsum dolor sit amet,<p class="display-inline">adipisicing</p>  elit. Neque sapiente earum repellat corporis ea sit recusandae, fugiat minus, eaque magni tempore beatae dolores rerum quibusdam voluptatum, numquam maiores id dicta!S</div>
-    <p>Lorem ipsum, dolor sit amet adipisicing elit. Blanditiis, ipsam. Obcaecati </span class="display-inline-block"> sequi </span>deserunt assumenda, asperiores, vero quae laborum explicabo ut hic eius praesentium deleniti sapiente! Dolor excepturi laborum laudantium voluptatem.
+    <div>Lorem ipsum, dolor sit amet adipisicing elit. Blanditiis, ipsam. Obcaecati </span class="display-inline-block"> sequi </span>deserunt assumenda, asperiores, vero quae laborum explicabo ut hic eius praesentium deleniti sapiente! Dolor excepturi laborum laudantium voluptatem.</p><div></div>
 
     </p>
+
+    <ul>
+        <li>list-1 </li>
+        <li class="display-hidden">list-2</li>
+        <li>list-3</li>
+
+    </ul>
 
 </body>
 </html>
